2001-12-01  Markus F.X.J. Oberhumer <mfx>

	* setup.py: Do not remove entries from a list while iterating
	over it.

2001-11-29  Kjetil Jacobsen  <kjetilja>

	* Added code in setup.py to install on Windows.  Requires some
	manual configuration (by Tino Lange <Tino.Lange@gmx.de>).

2001-11-27  Kjetil Jacobsen  <kjetilja>

	* Improved detection of where libcurl is installed in setup.py.
	Should make it easier to install pycurl when libcurl is not
	located in regular lib/include paths.

2001-11-05  Kjetil Jacobsen  <kjetilja>

	* Some of the newer options to setopt were missing, this should
	now be fixed.

2001-11-04  Kjetil Jacobsen  <kjetilja>

	* Exception handling has been improved and should no longer throw
	spurious exceptions (by Markus F.X.J. Oberhumer
	<markus@oberhumer.com>).

2001-10-15  Kjetil Jacobsen  <kjetilja>

	* Refactored the test_gtk.py script to avoid global variables.

2001-10-12  Kjetil Jacobsen  <kjetilja>

	* Added module docstrings, terse perhaps, but better than nothing.

	* Added the 'basicfirst.py' file which is a Python version of the
	corresponding Perl script by Daniel.

	* PycURL now works properly under Python 1.5 and 1.6 (by Markus
	F.X.J. Oberhumer <markus@oberhumer.com>).

	* Allow C-functions and Python methods as callbacks (by Markus
	F.X.J. Oberhumer <markus@oberhumer.com>).

	* Allow None as success result of write, header and progress
	callback invocations (by Markus F.X.J. Oberhumer
	<markus@oberhumer.com>).

	* Added the 'basicfirst2.py' file which demonstrates the use of a
	class method as callback instead of just a function.

2001-08-21  Kjetil Jacobsen  <kjetilja>

	* Cleaned up the script with GNOME/PycURL integration.

2001-08-20  Kjetil Jacobsen  <kjetilja>

	* Added another test script for shipping XML-RPC requests which
	uses py-xmlrpc to encode the arguments (tests/test_xmlrpc2.py).

2001-08-20  Kjetil Jacobsen  <kjetilja>

	* Added test script for using PycURL and GNOME (tests/test_gtk.py).
