@@ -1,5 +1,10 @@
 2001-12-01  Markus F.X.J. Oberhumer <mfx>
 
+	* Added the 'test_stringio.py' file which demonstrates the use of
+	StringIO objects as callback.
+
+2001-12-01  Markus F.X.J. Oberhumer <mfx>
+
 	* setup.py: Do not remove entries from a list while iterating
 	over it.
 
